grupoDeSeguranca.tf
resource "aws_security_group" "aluno-jhonatan-acesso" {
  name = "aluno-jhonatan-acesso"//nome unico
  description = "aluno-jhonatan-acesso"
  ingress {
    description      = "SSH"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
  tags = {
    "Name" = "ssh"
  }
}

//grupo de segurança
resource "aws_security_group" "jhonatan-acesso-web" {
  name = "jhonatan-acesso-web"//nome unico
  description = "jhonatan-acesso web"
  ingress {
    description      = "HTTP"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
  tags = {
    "Name" = "web"
  }
}
